kubernetes/contoso-website/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website-varun
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.3c4e03680dcb4eb29777.eastus.aksapp.io
      http:
        paths:
          - backend:
              service:
                name: contoso-website-varun
                port:
                  name: http
            path: /
            pathType: Prefix
